SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Abandoned_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_In_Queue__c</fullName>
    <formula>IF(
  AND(
    CallDisposition &lt;&gt; &quot;in-progress&quot;,
    NOT(ISNULL(CallQueuedDateTime)),
    ISNULL(CallAcceptDateTime),
    TEXT(CallType) &lt;&gt; &quot;Transfer&quot;
  ), 
  1, 
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned In Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>