SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Abandoned_In_SL__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_In_SL__c</fullName>
    <formula>IF(
  AND(
    ISBLANK(CallAcceptDateTime),
    NOT(ISBLANK(CallEndDateTime)),
    NOT(ISBLANK(CallQueuedDateTime)),
    (CallEndDateTime - CallQueuedDateTime) * 24 * 60 * 60 &lt; 20
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned In SL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>