SF-Perkin/force-app/main/default/objects/VoiceCall/fields/After_Call_Work_Time_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>After_Call_Work_Time_In_Minutes__c</fullName>
    <formula>After_Call_Work_Time_In_Seconds__c /60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Call Work Time In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>