SF-Perkin/force-app/main/default/objects/VoiceCall/fields/After_Call_Work_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>After_Call_Work_Time_In_Seconds__c</fullName>
    <formula>Agent_Work__r.AfterConversationActualTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Call Work Time In Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>