SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Agent_Skill__c.field-meta.xml
<CustomField>
    <fullName>Agent_Skill__c</fullName>
    <description>Text field to display required skill</description>
    <label>Agent Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>