SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Agent_Work__c.field-meta.xml
<CustomField>
    <fullName>Agent_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Work</label>
    <referenceTo>AgentWork</referenceTo>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>