SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Answered__c.field-meta.xml
<CustomField>
    <fullName>Answered__c</fullName>
    <formula>IF(NOT(ISNULL(CallAcceptDateTime)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>