SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Answerednew__c.field-meta.xml
<CustomField>
    <fullName>Answerednew__c</fullName>
    <formula>IF(NOT(ISNULL(CallAcceptDateTime)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>