SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Call_Dropped_due_to_Customer_disconnect__c.field-meta.xml
<CustomField>
    <fullName>Call_Dropped_due_to_Customer_disconnect__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(CallStartDateTime)),
        ISBLANK(CallQueuedDateTime),
        ISBLANK(CallAcceptDateTime),
        TEXT(CallStatus) = &quot;completed&quot;,
        DisconnectReason = &quot;CUSTOMER_DISCONNECT&quot;,
        TEXT(CallOrigin) &lt;&gt; &quot;Voicemail&quot;,
        TEXT(CallType) = &quot;Inbound&quot;
    ),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Dropped due to Customer disconnect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>