SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Call_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Hour__c</fullName>
    <formula>MID(TEXT(CallStartDateTime-0.2917), 12, 2) + &#39;:00&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start Hour</label>
    <type>Text</type>
</CustomField>