SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Calls_Answer_in_20_Sec__c.field-meta.xml
<CustomField>
    <fullName>Calls_Answer_in_20_Sec__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(CallAcceptDateTime)),
NOT(ISBLANK(CallQueuedDateTime)),
(CallAcceptDateTime- CallQueuedDateTime) * 24 * 60 * 60 &lt; 20
),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calls Answer in 20 Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>