SF-Perkin/force-app/main/default/objects/VoiceCall/fields/contactPrompt__c.field-meta.xml
<CustomField>
    <fullName>contactPrompt__c</fullName>
    <label>contactPrompt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>