SF-Perkin/force-app/main/default/objects/VoiceCall/fields/contactPromptClsd__c.field-meta.xml
<CustomField>
    <fullName>contactPromptClsd__c</fullName>
    <label>contactPromptClsd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>