SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Handle_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time_In_Seconds__c</fullName>
    <formula>IF(
  AND(
    NOT(ISNULL(CallAcceptDateTime)),
    NOT(ISNULL(CallEndDateTime))
  ),
  MAX(((CallEndDateTime - CallAcceptDateTime) * 24 * 60 * 60), 0),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle Time In Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>