SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Not_Answered__c.field-meta.xml
<CustomField>
    <fullName>Not_Answered__c</fullName>
    <formula>IF(
    ISBLANK(CallAcceptDateTime),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>