SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Number_of_Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Outbound_Calls__c</fullName>
    <formula>IF( TEXT( CallType ) = &quot;Outbound&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Outbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>