SF-Perkin/force-app/main/default/objects/VoiceCall/fields/of_Transfer_Call__c.field-meta.xml
<CustomField>
    <fullName>of_Transfer_Call__c</fullName>
    <formula>IF( TEXT( CallType ) = &quot;Transfer&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Transfer Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>