SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Pending_voicemail__c.field-meta.xml
<CustomField>
    <fullName>Pending_voicemail__c</fullName>
    <formula>AND(
    ISPICKVAL( CallOrigin , &quot;Voicemail&quot;),
    OR(
        BEGINS(OwnerId, &quot;00G&quot;),
        CONTAINS(OwnerId, &quot;005Hu00000PIY&quot;)
    )
)</formula>
    <label>Pending voicemail</label>
    <type>Checkbox</type>
</CustomField>