SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Queue_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Queue_Wait_Time__c</fullName>
    <formula>(  CallEndDateTime  -  CallQueuedDateTime) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>