SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Recording_Link__c</fullName>
    <formula>IF(IsRecorded, HYPERLINK(&quot;https://changethis.my.connect.aws/get-recording?format=wav&amp;callLegId=&quot; &amp; VendorCallKey, &quot;Download Recording&quot;),
&quot;Not Recorded&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recording Link</label>
    <type>Text</type>
</CustomField>