SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>