SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Talk_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time_In_Seconds__c</fullName>
    <formula>Handle_Time_In_Seconds__c - CustomerHoldDuration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talk Time In Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>