SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Total_Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Total_Abandoned__c</fullName>
    <formula>(
Abandoned_In_Queue__c+
Abandoned_In_Transfer__c+
Voicemails__c
)
-
Abandoned_In_SL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Abandoned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>