SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <formula>Number_of_Inbound_Calls__c + Number_of_Outbound_Calls__c + of_Transfer_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inbound+Outbound+Transfer</inlineHelpText>
    <label>Total Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>