SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Voicemail__c.field-meta.xml
<CustomField>
    <fullName>Voicemail__c</fullName>
    <formula>ISPICKVAL(CallOrigin, &quot;Voicemail&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voicemail</label>
    <type>Checkbox</type>
</CustomField>