SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Voicemail_Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Case_Queue__c</fullName>
    <label>Voicemail Case Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>