SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Voicemails__c.field-meta.xml
<CustomField>
    <fullName>Voicemails__c</fullName>
    <formula>IF(
ISPICKVAL(CallOrigin, &quot;voicemail&quot;),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voicemails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>