SF-Perkin/force-app/main/default/objects/VoiceCall/fields/Wait_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_In_Seconds__c</fullName>
    <formula>IF(
  NOT(ISNULL(CallAcceptDateTime)),
  IF(
    NOT(ISNULL(CallQueuedDateTime)),
    ((CallAcceptDateTime - CallQueuedDateTime) * 24 * 60 * 60),
    0
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wait Time In Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>