SF-Perkin/force-app/main/default/objects/VoiceCall/listViews/Pending_Voicemail.listView-meta.xml
<ListView>
    <fullName>Pending_Voicemail</fullName>
    <columns>Name</columns>
    <columns>CallPath__c</columns>
    <columns>ToPhoneNumber</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallStartDateTime</columns>
    <columns>CallOrigin</columns>
    <columns>Owner</columns>
    <columns>CallType</columns>
    <columns>CallResolution</columns>
    <columns>EndUser</columns>
    <columns>QualityScore</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_voicemail__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pending Voicemail</label>
</ListView>