SF-Perkin/force-app/main/default/objects/VoiceCall/listViews/SCV_Voicemail_TAC_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_Voicemail_TAC_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV_Voicemail_TAC</label>
    <queue>SCV_Voicemail_TAC</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>