SF-Perkin/force-app/main/default/objects/VoiceCall/listViews/SCV_Voicemail_USA_Service_VoiceCall.listView-meta.xml
<ListView>
    <fullName>SCV_Voicemail_USA_Service_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>SCV Voicemail USA Service</label>
    <queue>SCV_Voicemail_USA_Service</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>